--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
     <link rel="stylesheet" href="./style.css" />
 
-    <title>Todo List</title>
+    <title>To-do List</title>
   </head>
 
   <body>
     <div class="container">
       <header>
-        <h1>Todo List</h1>
+        <h1>To-do List</h1>
 
         <p>Add a new to-do...</p>
 
